resources/helm/msr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stt-contact-management-app
spec:
  type: ClusterIP
  ports:
  - port: 8443
    protocol: TCP
    targetPort: https-svc
    name: https-svc
  selector:
    app.kubernetes.io/name: microservicesruntime
    app.kubernetes.io/instance: contact-management
